--- a/front-end/src/app/demo/components/landing/landing.component.html
+++ b/front-end/src/app/demo/components/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="surface-0 flex justify-content-center">
-    <div id="home" class="landing-wrapper overflow-hidden">
+    <div id="home" class="landing-wrapper overflow-hidden w-full">
         <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
             <a class="flex align-items-center" href="#">
                 <img src="assets/layout/images/esportes.png" alt="Sakai Logo" height="50" class="mr-1 lg:mr-3"><span class="text-900 font-medium text-2xl line-height-3 mr-8">ESPTO</span>
@@ -11,17 +11,16 @@
                 <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
                 </ul>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-                    <button pButton pRipple label="Login" routerLink="/auth/login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
-                    <button pButton pRipple label="Register" routerLink="/auth/register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+                    <button pButton pRipple label="Entrar" routerLink="/auth/login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
+                    <button pButton pRipple label="Registrar" routerLink="/auth/register" style="background-color: #0068FF" class="border-none ml-5 font-light line-height-2  text-white"></button>
                 </div>
             </div>
         </div>
 
-        <div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
-            style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EEEFAF 0%, #C3E3FA 100%); clip-path: ellipse(150% 87% at 93% 13%);">
+        <div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden" style="clip-path: ellipse(150% 87% at 93% 13%);">
             <div class="mx-4 md:mx-8 mt-0 md:mt-4">
                 <h1 class="text-6xl font-bold text-gray-900 line-height-2"><span class="font-light block">Qualquer esporte,</span>em qualquer lugar, para qualquer pessoa.</h1>
-                <button pButton pRipple type="button" label="Começar" class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
+                <button pButton pRipple type="button" label="Começar" style="background-color: #0068FF" class="text-xl border-none mt-3 font-normal line-height-3 px-3 text-white"></button>
             </div>
             <div class="flex justify-content-center md:justify-content-end">
                 <img src="assets/demo/images/landing/63e25dcf5dd860.jpg" style="border-radius:8px;" alt="Hero Image" class="w-9 md:w-auto">
@@ -62,47 +61,6 @@
 
         <div class="py-4 px-4 mx-0 mt-8 lg:mx-8">
             <div class="grid justify-content-between">
-                <div class="col-12 md:col-2" style="margin-top:-1.5rem;">
-                    <a (click)="router.navigate(['/pages/landing'], {fragment: 'home'})" class="flex flex-wrap align-items-center justify-content-center md:justify-content-start md:mb-0 mb-3 cursor-pointer">
-                        <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="footer sections" width="50" height="50" class="mr-2">
-                        <h4 class="font-medium text-3xl text-900">SAKAI</h4>
-                    </a>
-                </div>
-
-                <div class="col-12 md:col-10 lg:col-7">
-                    <div class="grid text-center md:text-left">
-                        <div class="col-12 md:col-3">
-                            <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Company</h4>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">About Us</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">News</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Investor Relations</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Careers</a>
-                            <a class="line-height-3 text-xl block cursor-pointer text-700">Media Kit</a>
-                        </div>
-
-                        <div class="col-12 md:col-3 mt-4 md:mt-0">
-                            <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Resources</h4>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Get Started</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Learn</a>
-                            <a class="line-height-3 text-xl block cursor-pointer text-700">Case Studies</a>
-                        </div>
-
-                        <div class="col-12 md:col-3 mt-4 md:mt-0">
-                            <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Community</h4>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Discord</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Events<img src="assets/demo/images/landing/new-badge.svg" class="ml-2"/></a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">FAQ</a>
-                            <a class="line-height-3 text-xl block cursor-pointer text-700">Blog</a>
-                        </div>
-
-                        <div class="col-12 md:col-3 mt-4 md:mt-0">
-                            <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Legal</h4>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Brand Policy</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Privacy Policy</a>
-                            <a class="line-height-3 text-xl block cursor-pointer text-700">Terms of Service</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
